--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "author": "ahmed-ezzat",
   "license": "ISC",
@@ -15,5 +15,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.26",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
